fixed delete button on mobile

--- a/src/frontend/components/app_assets/app_assets.css
+++ b/src/frontend/components/app_assets/app_assets.css
@@ -154,7 +154,7 @@ body {
         margin-top: -40px;
     }
     #modal_share{
-        padding: 9px;
+        padding: 1%;
     }
     #footer{
         text-align: right;
@@ -210,6 +210,7 @@ body {
         height: auto;
         margin-top: 10px;
     }
+ 
   
     #footer{
         text-align: right;
@@ -219,7 +220,6 @@ body {
         word-wrap: break-word;
         text-decoration: none;
     }
-
     .first_col2{
         margin-top: -12.5%;
     }
